--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body> 
+
   <main class="main js-main"> 
     <div class="start-screen active" id="start-screen">
       <div class="start-texts">
@@ -18,7 +19,7 @@
       </div>
       <div class="btn-container">
         <button class="v01c3-btn" id="start-video" disabled>
-          Start volume 1
+          Start volume 1   595959
         </button>
       </div>      
       <svg class="logo-1" width="230" height="38" viewBox="0 0 230 38">
