--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="btn-container">
         <button class="v01c3-btn" id="start-video" disabled>
-          Start volume 1   595959
+          Start volume 1
         </button>
       </div>      
       <svg class="logo-1" width="230" height="38" viewBox="0 0 230 38">
